data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3952.wast
;; 1. **Test Description 1**:    - Setup a WebAssembly module with multiple nested loops, multilevel branching, and `call_indirect` instructions. Ensure that the branching involves label resolutions. Test the module in both implementations to see if the `call_indirect` correctly resolves the function calls within the nested loop structure. Any incorrect label resolution might skip essential loops or functions, causing different behaviors between the implementations.

(assert_invalid
  (module
    (type $sig-mismatch (func (param i32) (result i32)))
    (type $sig-valid (func (param i32 i32) (result i32)))
    (table 1 funcref)
    (func $callee (export "callee") (param i32 i32) (result i32)
      local.get 0
    )
    (elem (i32.const 0) $callee)
    (func $test-nested
      block
        loop
          call_indirect (type $sig-mismatch) (i32.const 0) (i32.const 0)
          br 1
        end
      end
    )
  )
  "type mismatch"
)